--- a/style.css
+++ b/style.css
@@ -123,8 +123,8 @@ body {
   width: 100%;
 }
 
-.item .item__add::placeholder {
-  background-color: rgb(52, 58, 64);
+.item .item__add {
+  background-color: #007bff;
   border: 0;
   cursor: pointer;
   margin: 0;
